<resources>
    <string name="app_name">Shared Wallet</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="space">\u0020</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>

    <string name="welcome">Welcome</string>

    <string name="pot_name">Pot name</string>


    <string name="content_description">Image</string>

    <!-- Invitation -->
    <string name="invitation">Invitation</string>
    <string name="invitation_accept_refuse">You can accept or refuse invitation</string>
    <string name="have_been_invited">You have been invited to </string>

    <!-- Log -->
    <string name="log_in">Log in</string>
    <string name="register">Register</string>

    <!-- Register -->
    <string name="new_account">New Account</string>
    <string name="email_sent">"E-mail sent"</string>
    <string name="re_send_email">Re-send e-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_question"><u>Reset password ?</u></string>
    <string name="create_account">Create account</string>

    <!-- Profile -->
    <string name="my_profile">My profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="valid_email">Valid e-mail ?</string>
    <string name="change_password">Change my password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>

    <!-- Cagnotte -->
    <string name="cagnotte">Cagnotte</string>
    <string name="cagnotte_name">Cagnotte name</string>
    <string name="cagnotte_color">Cagnotte color</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="balance">Balance</string>
    <string name="category">Category</string>
    <string name="add_user">Add new user</string>
    <string name="invite_enter_email">Please enter new user e-mail</string>

    <!-- New spend -->
    <string name="new_spend">New spend</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>


    <string name="euro_symbol">€</string>

    <string name="creation_date">Creation date</string>
    <string name="created_by">Created by</string>
    <string name="paid_by">Paid by</string>
    <string name="for_who">For who</string>

    <string name="settings">Settings</string>
    <string name="equilibration">Equilibration</string>
    <string name="graphs">Graphs</string>

</resources>