<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:gravity="center"
            android:textSize="20sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordOnChangePassword"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newPassword"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_new_password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeatedNewPassword"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:flexDirection="row"
            app:justifyContent="space_around">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/error"
                android:id="@+id/cancel"
                app:srcCompat="@drawable/ic_outline_cancel_24"
                android:tooltipText="@string/cancel"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/success"
                android:id="@+id/submit"
                app:srcCompat="@drawable/ic_baseline_change_circle_24"
                android:tooltipText="@string/change_password"/>

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>