<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:gravity="center"
            android:textSize="25sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="row">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:id="@+id/firstNameProfile"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="row">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:text="@string/last_name"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:id="@+id/lastNameProfile"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="row">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:id="@+id/emailProfile"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="row">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:text="@string/valid_email"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="50%"
                android:id="@+id/validEmailProfile"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            app:flexDirection="row"
            app:justifyContent="space_between">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/info"
                    android:tooltipText="Edit profile"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    android:focusable="true" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:backgroundTint="@color/info"
                    android:tooltipText="Change password"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_change_circle_24"
                    android:focusable="true" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/logoutProfile"
                android:backgroundTint="@color/error"
                android:tooltipText="Log out"
                android:clickable="true"
                app:srcCompat="@drawable/ic_outline_mobile_off_24"
                android:focusable="true" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>